--- a/src/jfbchat/frames/JFrameAbout.form
+++ b/src/jfbchat/frames/JFrameAbout.form
@@ -82,7 +82,7 @@
             <Property name="columns" type="int" value="20"/>
             <Property name="editable" type="boolean" value="false"/>
             <Property name="rows" type="int" value="5"/>
-            <Property name="text" type="java.lang.String" value="&#xa;   JFBChat is a small, simple, Java based application specially designed to&#xa;   offer you a Facebook chat client for your desktop.&#xa;&#xa;    Author :  Digitex (Giuseppe Federico) digitex3d@gmail.com"/>
+            <Property name="text" type="java.lang.String" value="&#xa;   JFBChat is a small, simple application specially designed to offer you a Facebook &#xa;   chat client for your desktop.&#xa;&#xa;    Author :  Digitex (Giuseppe Federico) digitex3d@gmail.com"/>
           </Properties>
         </Component>
       </SubComponents>
