--- a/src/jfbchat/frames/ChatFrame.form
+++ b/src/jfbchat/frames/ChatFrame.form
@@ -201,7 +201,7 @@
             <Property name="text" type="java.lang.String" value="Send"/>
           </Properties>
           <Events>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="ButtonSendMouseClicked"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ButtonSendActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
