--- a/src/jfbchat/frames/ChatFrame.form
+++ b/src/jfbchat/frames/ChatFrame.form
@@ -165,8 +165,8 @@
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="PanelSend" pref="367" max="32767" attributes="0"/>
-                      <Component id="jPanelScrollMessages" alignment="0" pref="367" max="32767" attributes="0"/>
+                      <Component id="PanelSend" pref="365" max="32767" attributes="0"/>
+                      <Component id="jPanelScrollMessages" alignment="0" pref="365" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -268,7 +268,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="avatar" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jPanelUnderAvatar" min="-2" pref="18" max="-2" attributes="0"/>
+                      <Component id="jPanelUnderAvatar" min="-2" max="-2" attributes="0"/>
                       <EmptySpace pref="235" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -288,24 +288,19 @@
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace pref="54" max="32767" attributes="0"/>
-                          <Component id="jIsWritingImg" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace pref="41" max="32767" attributes="0"/>
+                          <Component id="isWritingLabel1" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jIsWritingImg" min="-2" max="-2" attributes="0"/>
+                      <Component id="isWritingLabel1" min="-2" max="-2" attributes="0"/>
                   </Group>
                 </DimensionLayout>
               </Layout>
               <SubComponents>
-                <Component class="javax.swing.JLabel" name="jIsWritingImg">
-                  <Properties>
-                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                      <Image iconType="3" name="/jfbchat/imgs/Conversation/iswriting.gif"/>
-                    </Property>
-                  </Properties>
+                <Component class="jfbchat.labels.IsWritingLabel" name="isWritingLabel1">
                 </Component>
               </SubComponents>
             </Container>
