--- a/src/jfbchat/frames/ChatFrame.form
+++ b/src/jfbchat/frames/ChatFrame.form
@@ -238,6 +238,7 @@
           <SubComponents>
             <Component class="javax.swing.JTextField" name="messageField">
               <Events>
+                <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="messageFieldFocusLost"/>
                 <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="messageFieldKeyTyped"/>
               </Events>
               <Constraints>
